tests/baselines/reference/destructuringAssignabilityCheck.errors.txt
destructuringAssignabilityCheck.ts(1,7): error TS2488: Type '{}' must have a '[Symbol.iterator]()' method that returns an iterator.
destructuringAssignabilityCheck.ts(2,7): error TS2532: Object is possibly 'undefined'.
destructuringAssignabilityCheck.ts(3,3): error TS2488: Type '{}' must have a '[Symbol.iterator]()' method that returns an iterator.
destructuringAssignabilityCheck.ts(4,3): error TS2532: Object is possibly 'undefined'.
destructuringAssignabilityCheck.ts(6,14): error TS2532: Object is possibly 'undefined'.
destructuringAssignabilityCheck.ts(9,14): error TS2488: Type '{}' must have a '[Symbol.iterator]()' method that returns an iterator.
destructuringAssignabilityCheck.ts(13,7): error TS2532: Object is possibly 'undefined'.
destructuringAssignabilityCheck.ts(15,7): error TS2488: Type '{}' must have a '[Symbol.iterator]()' method that returns an iterator.


==== destructuringAssignabilityCheck.ts (8 errors) ====
    const [] = {}; // should be error
          ~~
!!! error TS2488: Type '{}' must have a '[Symbol.iterator]()' method that returns an iterator.
    const {} = undefined; // error correctly
          ~~
!!! error TS2532: Object is possibly 'undefined'.
    (([]) => 0)({}); // should be error
      ~~
!!! error TS2488: Type '{}' must have a '[Symbol.iterator]()' method that returns an iterator.
    (({}) => 0)(undefined); // should be error
      ~~
!!! error TS2532: Object is possibly 'undefined'.
    
    function foo({}: undefined) {
                 ~~~~~~~~~~~~~
!!! error TS2532: Object is possibly 'undefined'.
        return 0
    }
    function bar([]: {}) {
                 ~~~~~~
!!! error TS2488: Type '{}' must have a '[Symbol.iterator]()' method that returns an iterator.
        return 0
    }
    
    const { }: undefined = 1
          ~~~
!!! error TS2532: Object is possibly 'undefined'.
    
    const []: {} = {}
          ~~
!!! error TS2488: Type '{}' must have a '[Symbol.iterator]()' method that returns an iterator.
    